--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 <center>
 				 <div class="dtext">
-            Hello, my name is Gyan Lakhwani, and I am a freelance graphic designer and engineering student.<p>Here are some of my open-source projects.
+            <p>We are zero design, a young design agency. We create simple and delightful user experiences. Here's some of our work.
          </div>
 			 </center>
 <center>
