--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
    </head>
+   <body>
 
 <body id="index" class="index">
+
 
 <div class="purplehead">
 
@@ -16,28 +18,27 @@
 </div>
 
   <div class="subzero">
-    <center>WORK - ABOUT US - PHILOSOPHY</center>
+    <center>WORK  -  ABOUT US  -  PHILOSOPHY</center>
   </div>
-
-</div>
 
 </div>
 <center>
 				 <div class="dtext">
-            <p>We are zero design, a young design agency. We create simple and delightful user experiences. Here's some of our work.
+            <p>"Good design is as little design as possible."
+            <br>- Dieter Rams
          </div>
 			 </center>
 <center>
     <a href="tocky.html">
 		      <div class="card">
-            	<img src="assets/img/project1.png" height="160" width="320">
+            	<img src="/assets/img/project1.png" height="160" width="320">
             	<div class="txt">Tocky Clock</div>
          	</div>
 </a>
 
     <a href="username.html">
 		      <div class="card">
-            	<img src="assets/img/project2.png" height="160" width="320">
+            	<img src="/assets/img/project2.png" height="160" width="320">
             	<div class="txt">Username Checker</div>
          	</div>
 </a>
