--- a/tocky.html
+++ b/tocky.html
@@ -15,7 +15,7 @@
   <div class="blogtitle">Tocky : A ticking alarm clock.</div>
   <div class="blogsubtitle">9 May 2016</div>
   <div class="blogtxt">
-  <p>I used to have a clock hanging in the hallway in my house. It was a large, circular clock, and if I ever studied late at night I would hear it ticking. I never thought much of it.
+  <p>I asghhasjsahjsa used to have a clock hanging in the hallway in my house. It was a large, circular clock, and if I ever studied late at night I would hear it ticking. I never thought much of it.
   <p>Fast forward a couple of years and I’ve since shifted homes, but maintained my nocturnal studying schedule. I don’t have that clock anymore, and I sometimes miss it when I’m trying to pull an all-nighter before an exam. It was a subtle reminder to keep working. Time is passing… are you?
   <p>I love my retro <a href="http://www.casio.com/products/Watches/Classic/A158WA-1">Casio A158W</a>, but I have to admit that clocks have been made redundant by mobile phones. We use phones to check the time, and to set alarms. But they don’t <i>tick!</i>
   <img src="/assets/img/tockyimg.png">
