--- a/jobsplane.html
+++ b/jobsplane.html
@@ -10,72 +10,33 @@
 
 <body id="index" class="index">
 
-
-<div class="purplehead">
-
-<div class="zero">
-  <center>zero</center>
-</div>
-
-  <div class="subzero">
-    <center>WORK  -  ABOUT US  -  PHILOSOPHY</center>
+<div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="tocky.html">Tocky</a></div>
+  <div class="blogcontainer">
+  <div class="blogtitle">Tocky : A ticking alarm clock.</div>
+  <div class="blogsubtitle">9 May 2016</div>
+  <div class="blogtxt">
+  <p>I asghhasjsahjsa used to have a clock hanging in the hallway in my house. It was a large, circular clock, and if I ever studied late at night I would hear it ticking. I never thought much of it.
+  <p>Fast forward a couple of years and I’ve since shifted homes, but maintained my nocturnal studying schedule. I don’t have that clock anymore, and I sometimes miss it when I’m trying to pull an all-nighter before an exam. It was a subtle reminder to keep working. Time is passing… are you?
+  <p>I love my retro <a href="http://www.casio.com/products/Watches/Classic/A158WA-1">Casio A158W</a>, but I have to admit that clocks have been made redundant by mobile phones. We use phones to check the time, and to set alarms. But they don’t <i>tick!</i>
+  <img src="/assets/img/tockyimg.png">
+  <p>Tocky is a project that aims to fix that. <a href="http://gyanl.github.io/TockyClock">Open up Tocky</a> on your phone or computer, and you’ll be greeted with a friendly tick-tock sound that’ll keep you company while you work. You can even set an alarm and use the ticking to keep you focused till then.
+  <p>Tocky was my first attempt at building a functional web app. It’s coded in HTML, CSS and Javascript. Check it out on <a href="https://github.com/gyanl/TockyClock">Github</a>!
   </div>
-
+  <hr>
+  <div class="UItext">Other Projects</div>
 </div>
-<center>
-				 <div class="dtext">
-            <p>"Good design is as little design as possible."
-            <br>- Dieter Rams
-         </div>
-			 </center>
-<center>
-    <a href="jobsplane.html">
-		      <div class="card">
-            	<img src="/assets/img/jobsplane.png" height="160" width="320">
-            	<div class="txt">Jobsplane</div>
-         	</div>
-</a>
 
-    <a href="username.html">
+  <div class="scale75">
+  <center>
+      <a href="username.html">
 		      <div class="card">
             	<img src="/assets/img/project2.png" height="160" width="320">
             	<div class="txt">Username Checker</div>
          	</div>
 </a>
 
-    <a href="chromagen.html">
-		      <div class="card">
-            	<img src="/assets/img/project3.png" height="160" width="320">
-            	<div class="txt">ChromaGen</div>
-         	</div>
-</a>
-
-    <a href="jobsplane.html">
-		      <div class="card">
-            	<img src="/assets/img/jobsplane.png" height="160" width="320">
-            	<div class="txt">Jobsplane</div>
-         	</div>
-</a>
-
-    <a href="username.html">
-		      <div class="card">
-            	<img src="/assets/img/project2.png" height="160" width="320">
-            	<div class="txt">Username Checker</div>
-         	</div>
-</a>
-
-    <a href="chromagen.html">
-		      <div class="card">
-            	<img src="/assets/img/project3.png" height="160" width="320">
-            	<div class="txt">ChromaGen</div>
-         	</div>
-</a>
-
-
-<div class="spaced">
-</center>
-</div>
-
+  </center>
+  </div>
   <div class="footer">
       <center>
          <a href="https://www.facebook.com/gyandroid">
@@ -111,7 +72,3 @@
 </body>
 </html>
 
-
-	<script src="/assets/js/script.js"></script>
-</body>
-</html>
