Make background work
Change to complete URL

--- a/username.html
+++ b/username.html
@@ -27,10 +27,10 @@
 
 <div class="scale75">
 <center>
-    <a href="chromagen.html">
+    <a href="pmo.html">
 		      <div class="card">
-            	<img src="/assets/img/project3.png" height="160" width="320">
-            	<div class="txt">ChromaGen</div>
+            	<img src="/assets/img/pmo.png" height="160" width="320">
+            	<div class="txt">PMO India App</div>
          	</div>
 </a>
 
