--- a/pmo.html
+++ b/pmo.html
@@ -10,72 +10,32 @@
 
 <body id="index" class="index">
 
+<div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="chromagen.html">ChromaGen</a></div>
+  <div class="blogcontainer">
+  <div class="blogtitle">ChromaGen : A random color generator.</div>
+  <div class="blogsubtitle">15 May 2016</div>
+  <div class="blogtxt">
 
-<div class="purplehead">
-
-<div class="zero">
-  <center>zero</center>
-</div>
-
-  <div class="subzero">
-    <center>WORK  -  ABOUT US  -  PHILOSOPHY</center>
+<p>ChromaGen is a color generator. It’s a lot less <i>sci-fi</i> than it sounds - you click a button, and it generates a color. I suppose you could do something with the color at that point. But hey - don’t let me tell you what to do. I’m not the boss of you. <a href="http://gyanl.github.io/ChromaGen/">Try it now</a> and do whatever you want!
+<p>ChromaGen uses the fact that each color in the RGB color space has a value of red, blue and green between 0 and 255. This allows us to generate a random value for the amount of red, blue and green in the color, and that’s what you see on the screen.
+<img src="/assets/img/green.png">
+<p>I built Chromogen with my thoroughly single (ladies take note) friend <a href="https://github.com/manu-chroma">Manvendra Singh</a>, using HTML, CSS and Javascript. It’s an open source project, and you can check out the code on <a href="https://github.com/gyanl/ChromaGen">Github</a>.
   </div>
-
+  <hr>
+  <div class="UItext">Other Projects</div>
 </div>
-<center>
-				 <div class="dtext">
-            <p>"Good design is as little design as possible."
-            <br>- Dieter Rams
-         </div>
-			 </center>
-<center>
-    <a href="jobsplane.html">
+
+  <div class="scale75">
+  <center>
+      <a href="jobsplane.html">
 		      <div class="card">
             	<img src="/assets/img/jobsplane.png" height="160" width="320">
             	<div class="txt">Jobsplane</div>
          	</div>
 </a>
 
-    <a href="username.html">
-		      <div class="card">
-            	<img src="/assets/img/project2.png" height="160" width="320">
-            	<div class="txt">Username Checker</div>
-         	</div>
-</a>
-
-    <a href="pmo.html">
-		      <div class="card">
-            	<img src="/assets/img/pmo.png" height="160" width="320">
-            	<div class="txt">PMO India App</div>
-         	</div>
-</a>
-
-    <a href="jobsplane.html">
-		      <div class="card">
-            	<img src="/assets/img/jobsplane.png" height="160" width="320">
-            	<div class="txt">Jobsplane</div>
-         	</div>
-</a>
-
-    <a href="username.html">
-		      <div class="card">
-            	<img src="/assets/img/project2.png" height="160" width="320">
-            	<div class="txt">Username Checker</div>
-         	</div>
-</a>
-
-    <a href="pmo.html">
-		      <div class="card">
-            	<img src="/assets/img/pmo.png" height="160" width="320">
-            	<div class="txt">PMO India App</div>
-         	</div>
-</a>
-
-
-<div class="spaced">
-</center>
-</div>
-
+  </center>
+  </div>
   <div class="footer">
       <center>
          <a href="https://www.facebook.com/gyandroid">
@@ -111,7 +71,3 @@
 </body>
 </html>
 
-
-	<script src="/assets/js/script.js"></script>
-</body>
-</html>
