Fix image format error

--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
 <center>
     <a href="jobsplane.html">
 		      <div class="card">
-            	<img src="/assets/img/jobsplane.png" height="160" width="320">
+            	<img src="assets/img/jobsplane.png" height="160" width="320">
             	<div class="txt">Jobsplane</div>
          	</div>
 </a>
 
     <a href="username.html">
 		      <div class="card">
-            	<img src="/assets/img/project2.png" height="160" width="320">
+            	<img src="assets/img/project2.png" height="160" width="320">
             	<div class="txt">Username Checker</div>
          	</div>
 </a>
 
     <a href="pmo.html">
 		      <div class="card">
-            	<img src="/assets/img/pmo.png" height="160" width="320">
+            	<img src="assets/img/pmo.png" height="160" width="320">
             	<div class="txt">PMO India App</div>
          	</div>
 </a>
 
     <a href="jobsplane.html">
 		      <div class="card">
-            	<img src="/assets/img/jobsplane.png" height="160" width="320">
+            	<img src="assets/img/jobsplane.png" height="160" width="320">
             	<div class="txt">Jobsplane</div>
          	</div>
 </a>
 
     <a href="username.html">
 		      <div class="card">
-            	<img src="/assets/img/project2.png" height="160" width="320">
+            	<img src="assets/img/project2.png" height="160" width="320">
             	<div class="txt">Username Checker</div>
          	</div>
 </a>
 
     <a href="pmo.html">
 		      <div class="card">
-            	<img src="/assets/img/pmo.png" height="160" width="320">
+            	<img src="assets/img/pmo.png" height="160" width="320">
             	<div class="txt">PMO India App</div>
          	</div>
 </a>
