--- a/pmo.html
+++ b/pmo.html
@@ -29,7 +29,7 @@
   <center>
       <a href="jobsplane.html">
 		      <div class="card">
-            	<img src="/assets/img/jobsplane.png" height="160" width="320">
+            	<img src="assets/img/jobsplane.png" height="160" width="320">
             	<div class="txt">Jobsplane</div>
          	</div>
 </a>
