--- a/username.html
+++ b/username.html
@@ -29,7 +29,7 @@
 <center>
     <a href="pmo.html">
 		      <div class="card">
-            	<img src="/assets/img/pmo.png" height="160" width="320">
+            	<img src="assets/img/pmo.png" height="160" width="320">
             	<div class="txt">PMO India App</div>
          	</div>
 </a>
