Fix css and font issues

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <link rel="icon" sizes="192x192" href="tocky-192.png">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+      <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
    </head>
    <body>
 
@@ -22,11 +23,11 @@
   </div>
 
 </div>
+<div class="10px">.</div>
 <center>
-				 <div class="dtext">
-            <p>"Good design is as little design as possible."
-            <br>- Dieter Rams
-         </div>
+				 <div class="dtext">"Good design is as little design as possible."</div>
+          <div class="dtext">- Dieter Rams</div>
+
 			 </center>
 <center>
     <a href="jobsplane.html">
