--- a/onmovies.html
+++ b/onmovies.html
@@ -5,6 +5,7 @@
       <link rel="icon" sizes="192x192" href="tocky-192.png">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+      <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
    </head>
    <body>
 
@@ -12,7 +13,6 @@
 
 
 <div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="blog.html">Blog</a>  /  <a href="onmovies.html">On Movies</a></div>
-  <div class="blogcontainer">
   <div class="blogtitle">On Movies.</div>
   <div class="blogsubtitle">18 May 2016</div>
   <div class="blogtxt">
@@ -25,7 +25,6 @@
   </div>
   <hr>
   <div class="UItext">Other musings</div>
-</div>
 
   <div class="scale75">
   <center>
