--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
       <link rel="icon" sizes="192x192" href="tocky-192.png">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+      <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
    </head>
    <body>
 
