--- a/pmo.html
+++ b/pmo.html
@@ -5,37 +5,38 @@
       <link rel="icon" sizes="192x192" href="tocky-192.png">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+      <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
    </head>
    <body>
 
 <body id="index" class="index">
 
-<div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="chromagen.html">ChromaGen</a></div>
+<div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="username.html">Username</a></div>
   <div class="blogcontainer">
-  <div class="blogtitle">ChromaGen : A random color generator.</div>
-  <div class="blogsubtitle">15 May 2016</div>
+  <div class="blogtitle">Username Availability Checker</div>
+  <div class="blogsubtitle">10 May 2016</div>
   <div class="blogtxt">
-
-<p>ChromaGen is a color generator. It’s a lot less <i>sci-fi</i> than it sounds - you click a button, and it generates a color. I suppose you could do something with the color at that point. But hey - don’t let me tell you what to do. I’m not the boss of you. <a href="http://gyanl.github.io/ChromaGen/">Try it now</a> and do whatever you want!
-<p>ChromaGen uses the fact that each color in the RGB color space has a value of red, blue and green between 0 and 255. This allows us to generate a random value for the amount of red, blue and green in the color, and that’s what you see on the screen.
-<img src="/assets/img/green.png">
-<p>I built Chromogen with my thoroughly single (ladies take note) friend <a href="https://github.com/manu-chroma">Manvendra Singh</a>, using HTML, CSS and Javascript. It’s an open source project, and you can check out the code on <a href="https://github.com/gyanl/ChromaGen">Github</a>.
-  </div>
-  <hr>
-  <div class="UItext">Other Projects</div>
+    <p>Have you ever picked a username online, only to realise ‘animefan’ is already taken on Twitter, Facebook, Instagram and Tumblr? Have you stared in despair at the sign up screen as it tells you you can have animal_fan instead? Yeah, me too. It's the quintessential modern problem. And this right here is a solution.
+    </p><img src="/assets/img/animefan.png">
+    <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
+</p><img src="/assets/img/minihack.jpg">
+    <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
 </div>
+</div>
+<hr>
+<div class="UItext">Other Projects</div>
 
-  <div class="scale75">
-  <center>
-      <a href="jobsplane.html">
+<div class="scale75">
+<center>
+    <a href="pmo.html">
 		      <div class="card">
-            	<img src="assets/img/jobsplane.png" height="160" width="320">
-            	<div class="txt">Jobsplane</div>
+            	<img src="assets/img/pmo.png" height="160" width="320">
+            	<div class="txt">PMO India App</div>
          	</div>
 </a>
 
-  </center>
-  </div>
+</center>
+</div>
   <div class="footer">
       <center>
          <a href="https://www.facebook.com/gyandroid">
