--- a/onmovies.html
+++ b/onmovies.html
@@ -7,12 +7,12 @@
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
    </head>
-   <body>
+   <body alink="#fff" vlink="#fff">
 
 <body id="index" class="index">
 
 
-<div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="blog.html">Blog</a>  /  <a href="onmovies.html">On Movies</a></div>
+<div class="header-fixed"><a href="index.html"><p>zero</a>  /  <a href="blog.html">Blog</a>  /  <a href="onmovies.html">On Movies</a></div>
   <div class="blogtitle">On Movies.</div>
   <div class="blogsubtitle">18 May 2016</div>
   <div class="blogtxt">
@@ -23,7 +23,6 @@
 <p>Or maybe it is one, you think. But a shitty one.
 
   </div>
-  <hr>
   <div class="UItext">Other musings</div>
 
   <div class="scale75">
