--- a/username.html
+++ b/username.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
    </head>
-   <body>
+   <body alink="#fff" vlink="#fff">
 
 <body id="index" class="index">
 
@@ -23,7 +23,6 @@
     <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
 </div>
 </div>
-<hr>
 <div class="UItext">Other Projects</div>
 
 <div class="scale75">
