--- a/pmo.html
+++ b/pmo.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
    </head>
-   <body>
+   <body alink="#fff" vlink="#fff">
 
 <body id="index" class="index">
 
