--- a/ioteractions.html
+++ b/ioteractions.html
@@ -11,39 +11,22 @@
 
 <body id="index" class="index">
 
-
-<div class="purplehead">
-
-<div class="zero">
-  <center>zero</center>
+<div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="jobsplane.html">Ioteractions</a></div>
+  <div class="blogcontainer">
+  <div class="blogtitle">Ioteractions</div>
+  <div class="blogsubtitle">10 May 2016</div>
+  <div class="blogtxt">
+    <p>Have you ever picked a username online, only to realise ‘animefan’ is already taken on Twitter, Facebook, Instagram and Tumblr? Have you stared in despair at the sign up screen as it tells you you can have animal_fan instead? Yeah, me too. It's the quintessential modern problem. And this right here is a solution.
+    </p><center><img src="/assets/img/animefan.png"></center>
+    <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
+</p><center><img src="/assets/img/minihack.jpg"></center>
+    <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
 </div>
-
-  <div class="subzero">
-    <center>WORK  -  ABOUT US  -  PHILOSOPHY</center>
-  </div>
-
 </div>
-<div class="10px">.</div>
+<div class="UItext">Other Projects</div>
+
+<div class="scale75">
 <center>
-				 <div class="dtext">"Good design is as little design as possible."</div>
-          <div class="dtext">- Dieter Rams</div>
-
-			 </center>
-<center>
-    <a href="jobsplane.html">
-		      <div class="card">
-            	<img src="assets/img/jobsplane.png" height="160" width="320">
-            	<div class="txt">Jobsplane</div>
-         	</div>
-</a>
-
-    <a href="ioteractions.html">
-		      <div class="card">
-            	<img src="assets/img/ioteractions.png" height="160" width="320">
-            	<div class="txt">Ioteractions</div>
-         	</div>
-</a>
-
     <a href="pmo.html">
 		      <div class="card">
             	<img src="assets/img/pmo.png" height="160" width="320">
@@ -51,32 +34,8 @@
          	</div>
 </a>
 
-    <a href="hackindia.html">
-		      <div class="card">
-            	<img src="assets/img/hackindia.png" height="160" width="320">
-            	<div class="txt">HackIndia</div>
-         	</div>
-</a>
-
-    <a href="people.html">
-		      <div class="card">
-            	<img src="assets/img/people.png" height="160" width="320">
-            	<div class="txt">People</div>
-         	</div>
-</a>
-
-    <a href="yurii.html">
-		      <div class="card">
-            	<img src="assets/img/yurii.png" height="160" width="320">
-            	<div class="txt">Yurii</div>
-         	</div>
-</a>
-
-
-<div class="spaced">
 </center>
 </div>
-
   <div class="footer">
       <center>
          <a href="https://www.facebook.com/gyandroid">
@@ -112,7 +71,3 @@
 </body>
 </html>
 
-
-	<script src="/assets/js/script.js"></script>
-</body>
-</html>
