--- a/hitched.html
+++ b/hitched.html
@@ -13,7 +13,7 @@
 
 <div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="jobsplane.html">Jobsplane</a></div>
   <div class="blogcontainer">
-  <div class="blogtitle">Jobsplane</div>
+  <div class="blogtitle">Hitched</div>
   <div class="blogsubtitle">10 May 2016</div>
   <div class="blogtxt">
 
@@ -38,6 +38,13 @@
 		      <div class="card">
             	<img src="assets/img/pmo.png" height="160" width="320">
             	<div class="txt">PMO India App</div>
+         	</div>
+</a>
+
+      <a href="finbox.html">
+		      <div class="card">
+            	<img src="assets/img/finbox.png" height="160" width="320">
+            	<div class="txt">finbox</div>
          	</div>
 </a>
 
