--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
 			 </center>
 <center>
-    <a href="jobsplane.html">
+    <a href="finbox.html">
 		      <div class="card">
-            	<img src="assets/img/jobsplane.png" height="160" width="320">
-            	<div class="txt">Jobsplane</div>
+            	<img src="assets/img/finbox.png" height="160" width="320">
+            	<div class="txt">finbox</div>
          	</div>
 </a>
 
@@ -72,6 +72,12 @@
          	</div>
 </a>
 
+  <a href="finbox.html">
+		      <div class="card">
+            	<img src="assets/img/finbox.png" height="160" width="320">
+            	<div class="txt">finbox</div>
+         	</div>
+</a>
 
 <div class="spaced">
 </center>
