--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
 </div>
 
   <div class="subzero">
-    <center><a href="index.html">WORK</a>  -  ABOUT US  -  PHILOSOPHY</center>
+    <center>WORK  -  ABOUT US  -  PHILOSOPHY</center>
   </div>
 
 </div>
