Add all the tiles again???

--- a/blog.html
+++ b/blog.html
@@ -20,12 +20,7 @@
          </div>
 			 </center>
 <center>
-    <a href="onmovies.html">
-		      <div class="card">
-            	<img src="assets/img/onmovies.png" height="160" width="320">
-            	<div class="txt">On Movies</div>
-         	</div>
-</a>
+  ONMOVIES DELETE KARO
 
 
 <div class="spaced">
@@ -33,36 +28,9 @@
 </div>
 
   <div class="footer">
-      <center>
-         <a href="https://www.facebook.com/gyandroid">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-facebook-official"></i>
-         </button>
-         </a>
-         <a href="https://twitter.com/gyanl">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-twitter"></i>
-         </button>
-         </a>
-         <a href="https://www.instagram.com/gyanl/">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-instagram"></i>
-         </button>
-         </a>
-         <a href="https://www.linkedin.com/in/gyanlakhwani">
-         <button class="hvr-grow-shadow" type="button">
-         <i class="fa fa-linkedin"></i>
-         </button>
-         </a>
-         <a href="https://github.com/gyanl">
-         <button class="hvr-grow-shadow" type="button">
-         <i class="fa fa-github"></i>
-         </button>
-         </a>
-   </center>
    Made with
    <div class="heart">&hearts;</div>
-   in New Delhi
+   in New Delhi by Raghav and Gyan.
 </div>
 </body>
 </html>
