--- a/pmo.html
+++ b/pmo.html
@@ -11,9 +11,9 @@
 
 <body id="index" class="index">
 
-<div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="username.html">Username</a></div>
+<div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="PMO.html">PMO APP</a></div>
   <div class="blogcontainer">
-  <div class="blogtitle">Username Availability Checker</div>
+  <div class="blogtitle">PMO India Mobile App</div>
   <div class="blogsubtitle">10 May 2016</div>
   <div class="blogtxt">
     <p>Have you ever picked a username online, only to realise ‘animefan’ is already taken on Twitter, Facebook, Instagram and Tumblr? Have you stared in despair at the sign up screen as it tells you you can have animal_fan instead? Yeah, me too. It's the quintessential modern problem. And this right here is a solution.
@@ -38,36 +38,9 @@
 </center>
 </div>
   <div class="footer">
-      <center>
-         <a href="https://www.facebook.com/gyandroid">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-facebook-official"></i>
-         </button>
-         </a>
-         <a href="https://twitter.com/gyanl">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-twitter"></i>
-         </button>
-         </a>
-         <a href="https://www.instagram.com/gyanl/">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-instagram"></i>
-         </button>
-         </a>
-         <a href="https://www.linkedin.com/in/gyanlakhwani">
-         <button class="hvr-grow-shadow" type="button">
-         <i class="fa fa-linkedin"></i>
-         </button>
-         </a>
-         <a href="https://github.com/gyanl">
-         <button class="hvr-grow-shadow" type="button">
-         <i class="fa fa-github"></i>
-         </button>
-         </a>
-   </center>
    Made with
    <div class="heart">&hearts;</div>
-   in New Delhi
+   in New Delhi by Raghav and Gyan.
 </div>
 </body>
 </html>
