--- a/doubtnut.html
+++ b/doubtnut.html
@@ -11,15 +11,22 @@
 
 <body id="index" class="index">
 
-<div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="yurii.html">Yurii</a></div>
+<div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="doubtnut.html">Doubtnut</a></div>
   <div class="blogcontainer">
-  <div class="blogtitle">Yurii</div>
+  <div class="blogtitle">Hitched</div>
   <div class="blogsubtitle">10 May 2016</div>
   <div class="blogtxt">
-    <p>Yurii is a startup that allows you to book unique experiences guided by local experts.
-    </p><center><img src="/assets/img/yurii-logos.png"></center>
+
+  <p>Jobsplane is a job aggregator which helps people across India find the right jobs and internships for them. We worked with the Jobsplane team on an updated brand identity, a redesign of their website, and on the design for their new mobile app.
+  <div class="blogtitle2">Identity</div>
+  <p>The website and branding for Jobsplane had to be modernised without losing the unique look users had become used to. The challenge was to stick with the same red and grey branding as on the jobsplane.com website, and combine it with the material design guidelines to get a cohesive design identity for the app. We made the logo sleeker, and created a color palette based on the colors used in the logo and website. We also worked on a mascot for the brand, which w
+</p><center><img src="/assets/img/jobsplane-logo.png"></center>
+<div class="imgdesc">This is the stuff that we did lol. Hello lorem ipsum.</div>
+<div class="blogtitle2">Website</div>
+
+
     <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
-</p><center><img src="/assets/img/yurii-y.png"></center>
+    </p><center><img src="/assets/img/jobsplane-page2.png"></center>
     <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
 </div>
 </div>
@@ -31,6 +38,13 @@
 		      <div class="card">
             	<img src="assets/img/pmo.png" height="160" width="320">
             	<div class="txt">PMO India App</div>
+         	</div>
+</a>
+
+      <a href="finbox.html">
+		      <div class="card">
+            	<img src="assets/img/finbox.png" height="160" width="320">
+            	<div class="txt">finbox</div>
          	</div>
 </a>
 
