--- a/finbox.html
+++ b/finbox.html
@@ -11,9 +11,9 @@
 
 <body id="index" class="index">
 
-<div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="jobsplane.html">Jobsplane</a></div>
+<div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="finbox.html">Finbox</a></div>
   <div class="blogcontainer">
-  <div class="blogtitle">Jobsplane</div>
+  <div class="blogtitle">Finbox</div>
   <div class="blogsubtitle">10 May 2016</div>
   <div class="blogtxt">
 
@@ -44,36 +44,9 @@
 </center>
 </div>
   <div class="footer">
-      <center>
-         <a href="https://www.facebook.com/gyandroid">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-facebook-official"></i>
-         </button>
-         </a>
-         <a href="https://twitter.com/gyanl">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-twitter"></i>
-         </button>
-         </a>
-         <a href="https://www.instagram.com/gyanl/">
-         <button class="hvr-grow-shadow" type="button" onClick="setAlarm()">
-         <i class="fa fa-instagram"></i>
-         </button>
-         </a>
-         <a href="https://www.linkedin.com/in/gyanlakhwani">
-         <button class="hvr-grow-shadow" type="button">
-         <i class="fa fa-linkedin"></i>
-         </button>
-         </a>
-         <a href="https://github.com/gyanl">
-         <button class="hvr-grow-shadow" type="button">
-         <i class="fa fa-github"></i>
-         </button>
-         </a>
-   </center>
    Made with
    <div class="heart">&hearts;</div>
-   in New Delhi
+   in New Delhi by Raghav and Gyan.
 </div>
 </body>
 </html>
