30 July updates pushed

--- a/hackindia.html
+++ b/hackindia.html
@@ -16,7 +16,8 @@
   <div class="blogtitle">HackIndia</div>
   <div class="blogsubtitle">10 May 2016</div>
   <div class="blogtxt">
-    <p>Have you ever picked a username online, only to realise ‘animefan’ is already taken on Twitter, Facebook, Instagram and Tumblr? Have you stared in despair at the sign up screen as it tells you you can have animal_fan instead? Yeah, me too. It's the quintessential modern problem. And this right here is a solution.
+    <div class="blogtitle2">About the Firm</div>
+    <p>HackIndia was India's first large scale hackathon for students, organised by students. It brought together India's makers, designers, hackers and creators for a weekend of building cool things.
     </p><center><img src="/assets/img/animefan.png"></center>
     <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
 </p><center><img src="/assets/img/minihack.jpg"></center>
