--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
   <div class="subzero">
-    <center><a href="index.html">WORK</a>  -  ABOUT US  -  PHILOSOPHY</center>
+    <center>ABOUT - <a href="index.html">WORK</a>  -  CONTACT</center>
   </div>
 
 </div>
