--- a/mova1.html
+++ b/mova1.html
@@ -17,7 +17,7 @@
   <div class="blogsubtitle">10 May 2016</div>
   <div class="blogtxt">
 
-  <p>Jobsplane is a job aggregator which helps people across India find the right jobs and internships for them. We worked with the Jobsplane team on an updated brand identity, a redesign of their website, and on the design for their new mobile app.
+  <p>MOVA1 is an interior architecture and furniture design firm that seeks to promote inventive and polished modern living solutions.
   <div class="blogtitle2">Identity</div>
   <p>The website and branding for Jobsplane had to be modernised without losing the unique look users had become used to. The challenge was to stick with the same red and grey branding as on the jobsplane.com website, and combine it with the material design guidelines to get a cohesive design identity for the app. We made the logo sleeker, and created a color palette based on the colors used in the logo and website. We also worked on a mascot for the brand, which w
 </p><center><img src="/assets/img/jobsplane-logo.png"></center>
