Jobsplane even more

--- a/jobsplane.html
+++ b/jobsplane.html
@@ -21,15 +21,20 @@
   <div class="blogtitle2">Identity</div>
 
   <p>The website and branding for Jobsplane had to be modernised without losing the unique look users were used to. The challenge was to stick with the same red and grey branding as on the jobsplane.com website, combine it with the material design guidelines to get a cohesive design identity, and apply it across the new website and app. We made the logo sleeker, created a color palette based on the colors used in the logo and website and worked on a caped mascot for the brand.
-</p><center><img src="/assets/img/jobsplane-logo.png"></center>
+<br></p><center><img src="/assets/img/jobsplane-logo.png"></center>
 <div class="imgdesc">The logo, color scheme, mascot and app icon.</div>
 <div class="blogtitle2">Website</div>
 
+<p>The Jobsplane website did not have a landing page - first time users were directly lead to job listings, and if they tried to apply for a job, they would be asked to sign up or sign in. We created a landing page that explained the core ideas behind Jobsplane, and created an onboarding process for first time users.
+<br></p><center><img src="/assets/img/jobsplane-webpage.png"></center><br>
 
-    <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
-    </p><center><img src="/assets/img/jobsplane-webpage.png"></center>
+<div class="blogtitle2">Mobile App</div>
+<p>Jobsplane creates a database of jobs, and uses machine learning algorithms to match users to the best possible jobs for them. To help users apply for the right jobs, the UX for the app needed to be radically different from the website. While the website aimed at showing users all of their options and letting them pick the jobs they were most interested in, this can quickly get overwhelming on mobile.
+<br></p><center><img src="/assets/img/jobsplane-webmob.png"></center>
+<p>The solution, then, is to show the user only one job at a time. The app curates the jobs most suitable for the user, and these jobs are then shown sequentially to the user. The user can choose to apply for the job, or ignore it.
+  <br></p><center><img src="/assets/img/jobsplane-app1.png"></center>
 
-    <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
+
 </div>
 </div>
 <div class="UItext">Other Projects</div>
