Update the website

--- a/jobsplane.html
+++ b/jobsplane.html
@@ -31,9 +31,14 @@
 <div class="blogtitle2">Mobile App</div>
 <p>Jobsplane creates a database of jobs, and uses machine learning algorithms to match users to the best possible jobs for them. To help users apply for the right jobs, the UX for the app needed to be radically different from the website. While the website aimed at showing users all of their options and letting them pick the jobs they were most interested in, this can quickly get overwhelming on mobile.
 <br></p><center><img src="/assets/img/jobsplane-webmob.png"></center>
-<p>The solution, then, is to show the user only one job at a time. The app curates the jobs most suitable for the user, and these jobs are then shown sequentially to the user. The user can choose to apply for the job, or ignore it.
+<div class="imgdesc">We can take advantage of the larger screen area on desktops and laptops to show multiple jobs at a time. On a phone-sized screen, however, this leads to an unpleasant, cluttered interface.</div>
+<p>The solution, then, is to show the user only one job at a time. The app curates the jobs most suitable for the user, and these jobs are then shown sequentially to the user. The user can choose to apply for the job, or ignore it. The most convenient way to implement this was with Tinder-style cards which could be swiped left to reject the job, or right to send an application.
+<p>The problem with this approach was that not all users would be familiar with the swiping gesture. After some consideration, we decided to use the onboarding process as a small training exercise. Instead of the a full-screen onboarding, we used the same swipeable cards as the jobs screen. The first card instructs you to swipe right to begin, and the user learns that cards can be swiped away.
+  <br></p><center><img src="/assets/img/jobsplane-app0.png"></center>
+<p><p>After the onboarding, the user can sign in and start filling out their details. If a user already uses the Jobsplane.com website, their data will be auto-filled from the website database.
   <br></p><center><img src="/assets/img/jobsplane-app1.png"></center>
-
+  <br></p><center><img src="/assets/img/jobsplane-app2.png"></center>
+  <br></p><center><img src="/assets/img/jobsplane-app3.png"></center>
 
 </div>
 </div>
