--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
+      <meta name="theme-color" content="#fff">
+
    </head>
    <body alink="#fff" vlink="#fff">
 
@@ -33,84 +35,72 @@
     <a href="pmo.html">
 		      <div class="card">
             	<img src="assets/img/pmo.png" height="160" width="320">
-            	<div class="txt">PMO India App</div>
          	</div>
 </a>
 
     <a href="glance.html">
 		      <div class="card">
             	<img src="assets/img/glance.png" height="160" width="320">
-            	<div class="txt">Glance</div>
          	</div>
 </a>
 
     <a href="mova1.html">
 		      <div class="card">
             	<img src="assets/img/MOVA1.png" height="160" width="320">
-            	<div class="txt">MOVA1</div>
          	</div>
 </a>
 
     <a href="hitched.html">
 		      <div class="card">
             	<img src="assets/img/Hitched.png" height="160" width="320">
-            	<div class="txt">Hitched</div>
          	</div>
 </a>
 
     <a href="jobsplane.html">
 		      <div class="card">
             	<img src="assets/img/jobsplane.png" height="160" width="320">
-            	<div class="txt">Jobsplane</div>
          	</div>
 </a>
 
     <a href="finbox.html">
 		      <div class="card">
             	<img src="assets/img/finbox.png" height="160" width="320">
-            	<div class="txt">finbox</div>
          	</div>
 </a>
 
     <a href="ioteractions.html">
 		      <div class="card">
             	<img src="assets/img/ioteractions.png" height="160" width="320">
-            	<div class="txt">Ioteractions</div>
          	</div>
 </a>
 
     <a href="doubtnut.html">
 		      <div class="card">
             	<img src="assets/img/Doubtnut.png" height="160" width="320">
-            	<div class="txt">Doubtnut</div>
          	</div>
 </a>
 
     <a href="yurii.html">
 		      <div class="card">
             	<img src="assets/img/yurii.png" height="160" width="320">
-            	<div class="txt">Yurii</div>
          	</div>
 </a>
 
     <a href="hackindia.html">
 		      <div class="card">
             	<img src="assets/img/hackindia.png" height="160" width="320">
-            	<div class="txt">HackIndia</div>
          	</div>
 </a>
 
     <a href="bic.html">
 		      <div class="card">
             	<img src="assets/img/BIC Volunteer App.png" height="160" width="320">
-            	<div class="txt">Billions in Change</div>
          	</div>
 </a>
 
     <a href="nadii.html">
 		      <div class="card">
             	<img src="assets/img/nadii.png" height="160" width="320">
-            	<div class="txt">Nadii</div>
          	</div>
 </a>
 
@@ -123,7 +113,7 @@
   <div class="footer">
    Made with
    <div class="heart">&hearts;</div>
-   in New Delhi by Raghav and Gyan.
+   in New Delhi by Raghav + Gyan.
 </div>
 </body>
 </html>
