--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
+      <meta name="theme-color" content="#fff">
+
    </head>
    <body alink="#fff" vlink="#fff">
 
@@ -30,7 +32,7 @@
   <div class="footer">
    Made with
    <div class="heart">&hearts;</div>
-   in New Delhi by Raghav and Gyan.
+   in New Delhi by Raghav + Gyan.
 </div>
 </body>
 </html>
