--- a/hitched.html
+++ b/hitched.html
@@ -6,6 +6,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
+      <meta name="theme-color" content="#fff">
+
    </head>
    <body alink="#fff" vlink="#fff">
 
@@ -37,14 +39,12 @@
     <a href="pmo.html">
 		      <div class="card">
             	<img src="assets/img/pmo.png" height="160" width="320">
-            	<div class="txt">PMO India App</div>
          	</div>
 </a>
 
       <a href="finbox.html">
 		      <div class="card">
             	<img src="assets/img/finbox.png" height="160" width="320">
-            	<div class="txt">finbox</div>
          	</div>
 </a>
 
@@ -53,7 +53,7 @@
   <div class="footer">
    Made with
    <div class="heart">&hearts;</div>
-   in New Delhi by Raghav and Gyan.
+   in New Delhi by Raghav + Gyan.
 </div>
 </body>
 </html>
