Add sticky header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
       <meta name="theme-color" content="#fff">
+      <script type="text/javascript" src="/assets/js/script.js" ></script>
+
 
    </head>
    <body alink="#fff" vlink="#fff">
@@ -16,21 +18,23 @@
 
 <div class="header-home">
 
-<div class="zero">
-  <center>Raghav + Gyan</center>
+
 </div>
-<div class="subzero">
+<div class="header-home2">
+    <center>  <div id=dis class="zero">
+Raghav + Gyan
+  </div> </center>
+  <div class="subzero">
   <center>
-    <a href="index.html"><div class="butt">WORK</div></a>
-    <a href="index.html"><div class="butt">ABOUT</div></a>
-    <a href="index.html"><div class="butt">CONTACT</div></a>
+    <a href="index.html"><div id="work" class="buttactive">WORK</div></a>
+    <a href="index.html"><div id="about" class="butt">ABOUT</div></a>
+    <a href="index.html"><div id="contact" class="butt">CONTACT</div></a>
   </center>
 </div>
 </div>
-<div class="10px">
-.
+<div class=".10px">
+  <p>.<p>.<p>.
 </div>
-
 <center>
     <a href="pmo.html">
 		      <div class="card">
