--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,8 @@
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
       <link rel="stylesheet" type="text/css" href="assets/webfonts/stylesheet.css">
       <meta name="theme-color" content="#fff">
+      <script type="text/javascript" src="/assets/js/script.js" ></script>
+
 
    </head>
    <body alink="#fff" vlink="#fff">
