Add dummy contact, about pages + fix laggy animation on mobile

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ Raghav + Gyan
   </div> </center>
   <div class="subzero">
   <center>
-    <a onclick="work()" href="index.html"><div id="work" class="butt">WORK</div></a>
-    <a onclick="about()" href="index.html"><div id="about" class="butt">ABOUT</div></a>
-    <a onclick="contact()" href="index.html"><div id="contact" class="butt">CONTACT</div></a>
+    <a onclick="work()" href="index.html"><div id="work" class="buttactive">WORK</div></a>
+    <a onclick="about()" href="about.html"><div id="about" class="butt">ABOUT</div></a>
+    <a onclick="contact()" href="contact.html"><div id="contact" class="butt">CONTACT</div></a>
   </center>
 </div>
 </div>
