--- a/hackindia.html
+++ b/hackindia.html
@@ -15,7 +15,7 @@
 
 <body id="index" class="index">
 
-<div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="hackindia.html">HackIndia</a></div>
+<div class="header-fixed"><a href="index.html"><p>Home</a> / <a href="hackindia.html">HackIndia</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">HackIndia</div>
   <div class="blogsubtitle">10 May 2016</div>
