--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
 <body id="index" class="index">
 
 
-<div class="header-home">
-
-
-</div>
 <div class="header-home2">
     <center>  <div id=dis class="zero">
 Raghav + Gyan
@@ -32,9 +28,8 @@ Raghav + Gyan
   </center>
 </div>
 </div>
-<div class=".10px">
-  <p>.<p>.<p>.
-</div>
+<div class="page">
+
 <center>
     <a href="pmo.html">
 		      <div class="card">
@@ -110,7 +105,6 @@ Raghav + Gyan
 
 
 
-<div class="spaced">
 </center>
 </div>
 
