--- a/mova1.html
+++ b/mova1.html
@@ -15,15 +15,10 @@
 
 <body id="index" class="index">
 
-<div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="mova1.html">MOVA1</a></div>
+<div class="header-fixed"><a href="index.html"><p>Home</a> / <a href="mova1.html">MOVA1</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">MOVA1</div>
   <div class="blogsubtitle">10 May 2016</div>
-<div class="tags">
-  <p><div class="tag">LOGO</div>
-  <div class="tag">WEBSITE</div>
-</div>
-
   <div class="blogtxt">
 
   <p>MOVA1 is an interior architecture and furniture design firm that seeks to promote inventive and polished modern living solutions.
