--- a/jobsplane.html
+++ b/jobsplane.html
@@ -15,10 +15,23 @@
 
 <body id="index" class="index">
 
-<div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="jobsplane.html">Jobsplane</a></div>
+<div class="header-fixed"><a href="index.html"><p>Home</a> / <a href="jobsplane.html">Jobsplane</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">Jobsplane</div>
-  <div class="blogsubtitle">10 May 2016</div>
+  <div class="blogsubtitle">The right job for you.</div>
+  <div class="author">
+        <img src="assets/img/gyan.png">
+
+        <div class="authorname">
+          <p>Gyan Lakhwani
+          <div class="authorbio">10 May 2016<p>
+            Designer by day, Ninja by night.
+        </div>
+      </div>
+
+</div>
+
+
   <div class="blogtxt">
 
   <p>Jobsplane is a job aggregator which helps people across India find the right jobs and internships for them. We worked with the Jobsplane team on an updated brand identity, a redesign of their website, and on the design for their new mobile app.
