--- a/hitched.html
+++ b/hitched.html
@@ -16,6 +16,17 @@
 <body id="index" class="index">
 
 <div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="hitched.html">Hitched</a></div>
+  <div class="down-header" id="downheader">
+  <div class="subzero">
+  <center>
+    <a onclick="work()" href="index.html"><div id="work" class="buttactive">WORK</div></a>
+    <a onclick="about()" href="about.html"><div id="about" class="butt">ABOUT</div></a>
+    <a onclick="contact()" href="contact.html"><div id="contact" class="butt">CONTACT</div></a>
+  </center>
+</div>
+</div>
+
+
   <div class="blogcontainer">
   <div class="blogtitle">Hitched</div>
   <div class="blogsubtitle">Happy marriage to you.</div>
