--- a/jobsplane.html
+++ b/jobsplane.html
@@ -15,10 +15,21 @@
 
 <body id="index" class="index">
 
-<div class="header-fixed"><a href="index.html"><p>Home</a> / <a href="jobsplane.html">Jobsplane</a></div>
+<div id=blogheader class="header-fixed"><a href="index.html"><p>Home</a> / <a href="jobsplane.html">Jobsplane</a></div>
+  <div class="down-header" id="downheader">
+  <div class="subzero">
+  <center>
+    <a onclick="work()" href="index.html"><div id="work" class="buttactive">WORK</div></a>
+    <a onclick="about()" href="about.html"><div id="about" class="butt">ABOUT</div></a>
+    <a onclick="contact()" href="contact.html"><div id="contact" class="butt">CONTACT</div></a>
+  </center>
+</div>
+</div>
+
+
   <div class="blogcontainer">
   <div class="blogtitle">Jobsplane</div>
-  <div class="blogsubtitle">The right job for you.</div>
+  <div class="blogsubtitle">Getting the right job for you.</div>
   <div class="author">
         <img src="assets/img/gyan.png">
 
@@ -31,8 +42,7 @@
 
 </div>
 
-
-  <div class="blogtxt">
+    <div class="blogtxt">
 
   <p>Jobsplane is a job aggregator which helps people across India find the right jobs and internships for them. We worked with the Jobsplane team on an updated brand identity, a redesign of their website, and on the design for their new mobile app.
   <div class="blogtitle2">Identity</div>
