Raghav + Gyan to 0DESIGN.CO

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 </div>
 <div class="header-home2">
     <center>  <div id=dis class="zero">
-Raghav + Gyan
+      0 DESIGN
   </div> </center>
   <div class="subzero">
   <center>
