--- a/surgge.html
+++ b/surgge.html
@@ -35,7 +35,7 @@
    </head>
    <body alink="#fff" vlink="#fff" id="index" class="index">
 
-<div id=blogheader class="header-fixed"><a href="index.html"><p>Home</a> / <a href="jobsplane.html">Jobsplane</a></div>
+<div id=blogheader class="header-fixed"><a href="index.html"><p>Home</a> / <a href="surgge.html">Surgge</a></div>
   <div class="down-header" id="downheader">
   <div class="subzero">
   <center>
@@ -48,7 +48,7 @@
 
 
   <div class="blogcontainer">
-  <div class="blogtitle">Jobsplane</div>
+  <div class="blogtitle">Surgge</div>
   <div class="blogsubtitle">Getting the right job for you.</div>
   <div class="author">
         <img src="assets/img/gyan.png">
