--- a/index.html
+++ b/index.html
@@ -10,10 +10,30 @@
       <script type="text/javascript" src="/assets/js/script.js" ></script>
 
 
-   </head>
-   <body alink="#fff" vlink="#fff">
 
-<body id="index" class="index">
+      <!-- Facebook Open Graph Tags -->
+      <meta property="og:title" content="0 Design">
+      <meta property="og:site_name" content="0 Design">
+      <meta property="og:url" content="http://0design.co">
+      <meta property="og:description" content="Good design is as little design as possible.">
+      <!-- meta property="fb:app_id" content="[FB_APP_ID]" /-->
+      <meta property="og:locale" content="en_US">
+      <meta property="og:image" content="assets/img/og_image.png">
+
+      <!-- SITE TITLE -->
+      <title>0 DESIGN</title>
+      <!-- =========================
+            TO DO : FAV AND TOUCH ICONS
+      ============================== -->
+      <link rel="shortcut icon" href="assets/img/favicon.ico">
+      <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="assets/img/apple-touch-icon.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="assets/img/apple-touch-icon.png">
+
+
+
+   </head>
+   <body alink="#fff" vlink="#fff" id="index" class="index">
 
 
 <div class="header-home2">
@@ -29,8 +49,7 @@
 </div>
 </div>
 <div class="page">
-
-<center>
+  <center>
     <a href="pmo.html">
 		      <div class="card">
             	<img src="assets/img/pmo.png" height="160" width="320">
@@ -103,7 +122,17 @@
          	</div>
 </a>
 
+    <a href="socialchess.html">
+		      <div class="card">
+            	<img src="assets/img/Social Chess.png" height="160" width="320">
+         	</div>
+</a>
 
+    <a href="surgge.html">
+		      <div class="card">
+            	<img src="assets/img/Surgge.png" height="160" width="320">
+         	</div>
+</a>
 
 </center>
 </div>
