--- a/socialchess.html
+++ b/socialchess.html
@@ -35,7 +35,7 @@
    </head>
    <body alink="#fff" vlink="#fff" id="index" class="index">
 
-<div id=blogheader class="header-fixed"><a href="index.html"><p>Home</a> / <a href="jobsplane.html">Jobsplane</a></div>
+<div id=blogheader class="header-fixed"><a href="index.html"><p>Home</a> / <a href="socialchess.html">Social Chess</a></div>
   <div class="down-header" id="downheader">
   <div class="subzero">
   <center>
@@ -48,8 +48,8 @@
 
 
   <div class="blogcontainer">
-  <div class="blogtitle">Jobsplane</div>
-  <div class="blogsubtitle">Getting the right job for you.</div>
+  <div class="blogtitle">Social Chess</div>
+  <div class="blogsubtitle">Play chess. Socially.</div>
   <div class="author">
         <img src="assets/img/gyan.png">
 
