--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="header-home2">
     <center>  <div id=dis class="zero">
-      0DESIGN.CO
+      0DESIGN
   </div> </center>
   <div class="subzero">
   <center>
@@ -48,7 +48,15 @@
   </center>
 </div>
 </div>
-<div class="page">
+<div class="fullscreen">
+  <div id='stars'></div>
+<div id='stars2'></div>
+<div id='stars3'></div>
+  <div class="centerthis">
+    <div class="logo">0DESIGN</div>
+    Good design is as little design as possible.
+  </div>
+</div>
   <center>
     <a href="pmo.html">
 		      <div class="card">
@@ -135,7 +143,6 @@
 </a>
 
 </center>
-</div>
 
   <div class="footer">
    Made with
