Add arrow, mobile rules

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
    </head>
    <body alink="#fff" vlink="#fff" id="index" class="index">
 
-
 <div class="header-home2">
     <center>  <div id=dis class="zero">
       0DESIGN
@@ -56,8 +55,12 @@
     <div class="logo">0DESIGN</div>
     Good design is as little design as possible.
   </div>
+  <div class="arrow bounce"></div>
 </div>
   <center>
+    <div class="zero">
+      <P>WORK
+    </div>
     <a href="pmo.html">
 		      <div class="card">
             	<img src="assets/img/pmo.png" height="160" width="320">
@@ -118,18 +121,18 @@
          	</div>
 </a>
 
-    <a href="bic.html">
+<!--    <a href="bic.html">
 		      <div class="card">
             	<img src="assets/img/BIC Volunteer App.png" height="160" width="320">
          	</div>
 </a>
-
-    <a href="nadii.html">
+ -->
+<!--    <a href="nadii.html">
 		      <div class="card">
             	<img src="assets/img/nadii.png" height="160" width="320">
          	</div>
 </a>
-
+ -->
     <a href="socialchess.html">
 		      <div class="card">
             	<img src="assets/img/Social Chess.png" height="160" width="320">
