Update some stuff

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div class="header-home2">
     <center>  <div id=dis class="zero">
-      0DESIGN
+      0DESIGN.CO
   </div> </center>
   <div class="subzero">
   <center>
