--- a/hackindia.html
+++ b/hackindia.html
@@ -42,10 +42,15 @@
   <div class="blogtxt">
     <div class="blogtitle2">About the Firm</div>
     <p>HackIndia was India's first large scale hackathon for students, organised by students. It brought together India's makers, designers, hackers and creators for a weekend of building cool things.
-    </p><center><img src="/assets/img/animefan.png"></center>
+<br></p><center><img src="/assets/img/hackindia-style-guide.png"></center>
+<br></p><center><img src="/assets/img/hackindia-shs.jpg"></center>
     <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
-</p><center><img src="/assets/img/minihack.jpg"></center>
+<br></p><center><img src="/assets/img/hackindia-who-is.jpg"></center>
     <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
+<br></p><center><img src="/assets/img/hackindia-people.jpg"></center>
+<br></p><center><img src="/assets/img/hackindia-poster.jpg"></center>
+
+
 </div>
 </div>
 <div class="UItext">Other Projects</div>
