--- a/pmo.html
+++ b/pmo.html
@@ -39,11 +39,24 @@
   <div class="blogcontainer">
   <div class="blogtitle">PMO India Mobile App</div>
   <div class="blogsubtitle">10 May 2016</div>
+  <div class="author">
+        <img src="assets/img/gyan.png">
+
+        <div class="authorname">
+          <p>Gyan Lakhwani
+          <div class="authorbio">10 May 2016<p>
+            Designer by day, Ninja by night.
+        </div>
+      </div>
+
+</div>
+
   <div class="blogtxt">
     <p>Have you ever picked a username online, only to realise ‘animefan’ is already taken on Twitter, Facebook, Instagram and Tumblr? Have you stared in despair at the sign up screen as it tells you you can have animal_fan instead? Yeah, me too. It's the quintessential modern problem. And this right here is a solution.
-    </p><img src="/assets/img/animefan.png">
+    <br></p><center><img src="/assets/img/pmo-app1.png"></center>
+    <div class="blogtitle2">Accessibility</div>
     <p>Username Availability Checker lets you input a username, and <i>almost</i> instantly find out if it’s been taken on Facebook, Twitter, Instagram, Tumblr, Pinterest, Soundcloud and Github. Seriously! <a href="https://username-check.herokuapp.com">Try it out now!</a> No more late nights spent in regret! No more silent tears in the rain! Only one username that you can use anywhere on the internet.
-</p><img src="/assets/img/minihack.jpg">
+      <br></p><center><img src="/assets/img/pmo-app2.png"></center>
     <p>This project was the result of an afternoon spent with my friend <a href="https://github.com/manu-chroma">Manvendra</a> trying to learn Python. We used <a href="http://flask.pocoo.org">Flask</a>, a python framework, to create an API which checks if a username exists on a website. It’s all very clever, and you can read more about it on the <a href="https://github.com/manu-chroma/username-availability-checker">project page on Github</a>.
 </div>
 </div>
