--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 
 <div class="header-home">
@@ -66,12 +66,112 @@
 <div class=".10px">
   <p>.<p>.<p>.
 </div>
+
 <center>
+  <div class="dtext">"Good design is as little design as possible."</div>
+   <div class="dtext2">This quote by Dieter Rams sums up how we think about design. The less someone notices our work, the better it is. Everything should just work, and the user shouldn't have to think. </div>
+  <a href="gyan.html">
+		      <div class="person">
+            <center>
+            	<img src="assets/img/gyan.jpg" height="160" width="320">
+              <div class="name">
+                Gyan Lakhwani
+              </div>
+              <div class="position">
+                gyan@0design.co
+              </div>
+</a>
 
-<p>This here is Raghav and Gyan yo.
 
-<div class="spaced">
+      <a href="https://www.facebook.com/gyandroid">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-facebook-official"></i>
+      </button>
+      </a>
+      <a href="https://twitter.com/gyanl">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-twitter"></i>
+      </button>
+      </a>
+      <a href="https://www.instagram.com/gyanl/">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-instagram"></i>
+      </button>
+      </a>
+      <a href="https://www.linkedin.com/in/gyanlakhwani">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-linkedin"></i>
+      </button>
+      </a>
+      <a href="https://github.com/gyanl">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-github"></i>
+      </button>
+      </a>
+      <a href="https://dribbble.com/gyanl">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-dribbble"></i>
+      </button>
+      </a>
+      <a href="https://behance.net/gyanl">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-behance"></i>
+      </button>
+      </a>
+    </center>
+    </div>
+
+  <a href="gyan.html">
+		      <div class="person">
+            <center>
+            	<img src="assets/img/raghav.jpg" height="160" width="320">
+              <div class="name">
+                Raghav Sarin
+              </div>
+              <div class="position">
+                raghav@0design.co
+              </div>
+</a>
+      <a href="https://www.facebook.com/gyandroid">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-facebook-official"></i>
+      </button>
+      </a>
+      <a href="https://twitter.com/gyanl">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-twitter"></i>
+      </button>
+      </a>
+      <a href="https://www.instagram.com/gyanl/">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-instagram"></i>
+      </button>
+      </a>
+      <a href="https://www.linkedin.com/in/gyanlakhwani">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-linkedin"></i>
+      </button>
+      </a>
+      <a href="https://github.com/gyanl">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-github"></i>
+      </button>
+      </a>
+      <a href="https://dribbble.com/gyanl">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-dribbble"></i>
+      </button>
+      </a>
+      <a href="https://behance.net/gyanl">
+      <button class="hvr-grow-shadow" type="button">
+      <i class="fa fa-behance"></i>
+      </button>
+      </a>
+    </center>
+    </div>
+
 </center>
+<div class="spaced">
 </div>
 
   <div class="footer">
