--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 
 <div class="header-home">
@@ -67,12 +67,24 @@
   <p>.<p>.<p>.
 </div>
 <center>
+<div class="magic">
+  <div class="magictext">
+      <div class="dtext">Say hello!</div>
+      <a href="mailto:hello@0design.co" target="_top">
+   <div class="dtext3">
+       hello@0design.co
+        </div>
+      </a>
 
-<p>Hello dis ma number.
-
-<div class="spaced">
-</center>
+     </div>
+<marquee direction="right" scrollamount="5">
+<div class="plane"></div>
+</marquee>
+<marquee direction="left" scrollamount="3">
+<div class="plane2"></div>
+</marquee>
 </div>
+
 
   <div class="footer">
    Made with
