--- a/doubtnut.html
+++ b/doubtnut.html
@@ -44,12 +44,24 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="doubtnut.html">Doubtnut</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">Hitched</div>
   <div class="blogsubtitle">10 May 2016</div>
+  <div class="author">
+        <img src="assets/img/raghav.png">
+
+        <div class="authorname">
+          <p>Raghav Sarin
+          <div class="authorbio">10 May 2016<p>
+          Kya aapne kabhi itna cool dude dekha hai?
+        </div>
+      </div>
+
+</div>
+
   <div class="blogtxt">
 
   <p>Jobsplane is a job aggregator which helps people across India find the right jobs and internships for them. We worked with the Jobsplane team on an updated brand identity, a redesign of their website, and on the design for their new mobile app.
