--- a/hitched.html
+++ b/hitched.html
@@ -44,7 +44,7 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div class="header-fixed"><a href="index.html"><p>Home</a> &#x25b6; <a href="hitched.html">Hitched</a></div>
   <div class="down-header" id="downheader">
