--- a/ioteractions.html
+++ b/ioteractions.html
@@ -44,12 +44,24 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div class="header-fixed"><p><a href="index.html">Home</a> / <a href="ioteractions.html">Ioteractions</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">Ioteractions</div>
   <div class="blogsubtitle">10 May 2016</div>
+  <div class="author">
+        <img src="assets/img/gyan.png">
+
+        <div class="authorname">
+          <p>Gyan Lakhwani
+          <div class="authorbio">10 May 2016<p>
+            Designer by day, Ninja by night.
+        </div>
+      </div>
+
+</div>
+
   <div class="blogtxt">
     <p>Ioteractions is an Internet of Things company that provides an IoT communication platform for smart devices.
     <br><center><img src="/assets/img/ioteractionslogo.png"></center>
