--- a/surgge.html
+++ b/surgge.html
@@ -44,7 +44,7 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div id=blogheader class="header-fixed"><a href="index.html"><p>Home</a> / <a href="surgge.html">Surgge</a></div>
   <div class="down-header" id="downheader">
