--- a/404.html
+++ b/404.html
@@ -44,37 +44,27 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 
 <div class="header-home2">
     <center>  <div id=dis class="zero">
       0DESIGN.CO
   </div> </center>
-  <div class="subzero">
-  <center>
-    <a onclick="work()" href="index.html"><div id="work" class="buttactive">WORK</div></a>
-    <a onclick="about()" href="about.html"><div id="about" class="butt">ABOUT</div></a>
-    <a onclick="contact()" href="contact.html"><div id="contact" class="butt">CONTACT</div></a>
-  </center>
-</div>
+
 </div>
 <div class="page">
-  <center>
-Error 404.
-<p>Page not found.
-</center>
+    <div class="fullscreen">
+      <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+      <div class="centerthis">
+        <div class="logo">ERROR 404</div>
+        The space you are looking for isn't here.
+        <a href="index.html"><div class="buttonic">Go home</div></a>
+      </div>
+    </div>
 </div>
-
-  <div class="footer">
-   Made with
-   <div class="heart">&hearts;</div>
-   in New Delhi by Raghav + Gyan.
-</div>
-</body>
-</html>
-
-
 	<script src="/assets/js/script.js"></script>
 </body>
 </html>
