--- a/aboutus.html
+++ b/aboutus.html
@@ -44,7 +44,7 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 
 <div class="purplehead">
