--- a/hackindia.html
+++ b/hackindia.html
@@ -44,12 +44,24 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div class="header-fixed"><a href="index.html"><p>Home</a> / <a href="hackindia.html">HackIndia</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">HackIndia</div>
   <div class="blogsubtitle">10 May 2016</div>
+  <div class="author">
+        <img src="assets/img/gyan.png">
+
+        <div class="authorname">
+          <p>Gyan Lakhwani
+          <div class="authorbio">10 May 2016<p>
+            Designer by day, Ninja by night.
+        </div>
+      </div>
+
+</div>
+
   <div class="blogtxt">
     <div class="blogtitle2">About the Firm</div>
     <p>HackIndia was India's first large scale hackathon for students, organised by students. It brought together India's makers, designers, hackers and creators for a weekend of building cool things.
