--- a/jobsplane.html
+++ b/jobsplane.html
@@ -44,7 +44,7 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div id=blogheader class="header-fixed"><a href="index.html"><p>Home</a> / <a href="jobsplane.html">Jobsplane</a></div>
   <div class="down-header" id="downheader">
@@ -109,6 +109,19 @@
             	<img src="assets/img/pmo.png" height="160" width="320">
          	</div>
 </a>
+
+    <a href="pmo.html">
+		      <div class="card">
+            	<img src="assets/img/pmo.png" height="160" width="320">
+         	</div>
+</a>
+
+    <a href="pmo.html">
+		      <div class="card">
+            	<img src="assets/img/pmo.png" height="160" width="320">
+         	</div>
+</a>
+
 
 </center>
 </div>
