--- a/mova1.html
+++ b/mova1.html
@@ -44,12 +44,24 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div class="header-fixed"><a href="index.html"><p>Home</a> / <a href="mova1.html">MOVA1</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">MOVA1</div>
   <div class="blogsubtitle">10 May 2016</div>
+  <div class="author">
+        <img src="assets/img/gyan.png">
+
+        <div class="authorname">
+          <p>Gyan Lakhwani
+          <div class="authorbio">10 May 2016<p>
+            Designer by day, Ninja by night.
+        </div>
+      </div>
+
+</div>
+
   <div class="blogtxt">
 
   <p>MOVA1 is an interior architecture and furniture design firm that seeks to promote inventive and polished modern living solutions.
