--- a/pmo.html
+++ b/pmo.html
@@ -44,7 +44,7 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div class="header-fixed"><a href="index.html"><p>Home</a>  /  <a href="PMO.html">PMO APP</a></div>
   <div class="blogcontainer">
