--- a/yurii.html
+++ b/yurii.html
@@ -44,12 +44,24 @@
 
 
    </head>
-   <body alink="#fff" vlink="#fff" id="index" class="index">
+   <body id="index" class="index">
 
 <div class="header-fixed"><a href="index.html"><p>Home</a> / <a href="yurii.html">Yurii</a></div>
   <div class="blogcontainer">
   <div class="blogtitle">Yurii</div>
   <div class="blogsubtitle">10 May 2016</div>
+  <div class="author">
+        <img src="assets/img/gyan.png">
+
+        <div class="authorname">
+          <p>Gyan Lakhwani
+          <div class="authorbio">10 May 2016<p>
+            Designer by day, Ninja by night.
+        </div>
+      </div>
+
+</div>
+
   <div class="blogtxt">
 
     <p>Yurii is a startup that allows you to book unique experiences guided by local experts.
